filled out prereqs